added more styles

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
                         </div>
                         <p>Enter a word and, we'll search scrape an idiom dictionary that contains it</p>
                     </div>
-                    <button id="scrapeButton" type="submit" class="button is-info is-light is-rounded">Scrape</button>
+                    <button id="scrapeButton" type="submit" class="button is-info is-outlined is-rounded">Scrape</button>
                 </div>
             </div>
             <div class="row" style="padding: 30px 30px">
@@ -35,8 +35,8 @@
                     </div>
                     <div class="btns">
                         <ul>
-                            <li><button id="searchButton" type="submit" class="button is-info is-light is-rounded">Search</button></li>
-                            <li><button id="getAllButton" type="submit" class="button is-info is-light is-rounded">Fetch all idioms</button></li>
+                            <li><button id="searchButton" type="submit" class="button is-info is-outlined  is-rounded">Search</button></li>
+                            <li><button id="getAllButton" type="submit" class="button is-info is-outlined is-rounded">Fetch all idioms</button></li>
                         </ul>
                     </div>
                 </div>
@@ -52,6 +52,7 @@
                 </div>
                 <div class="col">
                     <div class="card-content">
+                        <h3 class="content">Logs:</h3>
                         <div class="content" id="log">
                             Logs go here.
                         </div>
